--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,151 +2,204 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <title>Accueil-SportFemme</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="../static/assets/css/index-gestion_profil-contact.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+<title>Accueil-SportFemme</title>
 </head>
-<body background="assets/images/bg2.png"></body>
-    <header>
-        <nav>
-            <div class="navbar-container">
-                <div class="logo-container">
-                    <a href="/index"><img src="assets/images/logo.png" alt="logo"></a>
-                </div>
-                <ul class="navbar-links">
-                        <li><a href="/index">ACCUEIL</a></li>
-                        <li><a href="pages/entrainement.html">ENTRAINEMENTS</a></li>
-                        <li><a href="pages/nutrition.html">NUTRITION</a></li>
-                        <li><a href="pages/documentaire.html">DOCUMENTAIRES</a></li>
-                        <li><a href="/contact">CONTACT</a></li>
+<body>
+<header>
+    <nav id="accueil">
+        <div class="navbar">
+
+                <a href="index.html"><img id="logo-acceuil" src="../static/assets/images/logo.png" alt="logo"></a>
+                
+                <div class="navbar-lien">
+                    <ul>
+                    <li><a href="index.html">ACCUEIL</a></li>
+                    <li><a href="../templates/pages/entrainement.html">ENTRAINEMENTS</a></li>
+                    <li><a href="../templates/pages/nutrition.html">NUTRITION</a></li>
+                    <li><a href="../templates/pages/documentaire.html">DOCUMENTAIRES</a></li>
+                    <li><a href="../templates/pages/contact.html">CONTACT</a></li>
                     </ul>
-                    <div class="iconCompte"><i class="fa-solid fa-magnifying-glass"></i></div>
-                    <button id="connect"><a href="/inscription">SE CONNECTER</a></button>
-                </div>  
-        </nav> 
-    </header>
+                </div>
+
+                <div class="navbar-bouton">
+                    <a href="pages/profil.html"><img src="../static/assets/images/logo-sans-background-color.png" alt="image-profil"></a>
+                    <button><a href="../templates/pages/inscription.html">SE CONNECTER</a></button>
+                </div>
+        </div>
+        
+        <div class="navbar-texte">
+                <h1>Bienvenue</h1>
+        </div>
+    </nav> 
+</header>
 <main>
-    <div id="homePage" >
-        <div class="accueil-main">
-            <div class="accueil-animation">
-                <img class="accueil-course-logo" src="./assets/Images/img1.png" alt="Silhouette femme qui court">
-                <img class="accueil-image-enAvantToutes" src="./assets/Images/img2-removebg-preview (1).png" alt="EN AVANT TOUTES">
-            </div>
-    
-            <div class="accueil-peleMele">
-                <img id="accueil-main" src="./assets/Images/img3.jpg" alt="Mains tenant des altères">
-                <img id="accueil-portrait-trois" src="./assets/Images/img4.jpg" alt="Portrait de trois femmes sportives">
-                <img id="accueil-femme-tapis" src="./assets/Images/img7.jpg" alt="Femme sportive tenant un tapis de sport">
-    
-    
-                <div id="accueil-texte">
-                    <h2 id="resterMotivee">RESTER MOTIVEE <br>
-                        ET CONNECTEE <br>
-                        AVEC LA COMMUNAUTE <br>
-                        !!!</h2>
-                </div>
-    
-    
-                <img id="accueil-tapis-alteres" src="./assets/Images/img5.jpg" alt="Tapis de sport et altères">
-                <img id="accueil-femme-montre" src="./assets/Images/img6.jpg"
-                    alt="Femme sportive regardant sa montre de course">
-                <img id="accueil-dos-altere" src="./assets/Images/img8.jpg"
-                    alt="Femme sportive de dos couchée et tenant des altères pendant un exercice de pilate">
-                <img id="accueil-yoga" src="./assets/Images/img9.jpg" alt="Femme faisant du yoga">
-    
-    
-    
-                <img id="accueil-groupe-entrainement" src="./assets/Images/img10.jpg"
-                    alt="Groupe de femmes sportives pendant un entraînement">
-                <img id="accueil-personnes-chaussures" src="./assets/Images/img11.jpg"
-                    alt="Deux personnes lassant leurs chaussures de sport">
-            </div>
-    
-            <div class="accueil-presentation">
-                <div>
-                    <br><br><br><br><br><br>
-                    <div id="accueil-presentation-motivee-texte">
-                        <h3 id="motivee">MOTIVEE</h3>
-                        <p class="accueil-texte">Restée motivée est le plus difficile, c’est pourquoi nous avons réalisé ce
-                            qui
-                            nous
-                            manquait lorsque nous nous sommes mises au sport.
-                            Une safe place, où trouver de la motivation à travers des vidéos.
-                        </p>
-                        <br><br><br><br><br><br><br>
-                    </div>
-    
-                    <div id="accueil-presentation-connectee-image">
-                        <img src="./assets/Images/img13.png" alt="Illustration d'un ordinateur coloré">
-                    </div>
-    
-                </div>
-    
-                <div>
-                    <div id="accueil-presentation-motivee-image">
-                        <img src="./assets/Images/img12.png" alt="You are enougth dans une bulle">
-                    </div>
-                    <br><br><br><br> <br><br>
-                    <div id="accueil-presentation-connectee-texte">
-                        <h3 id="connectee">CONNECTEE</h3>
-                        <p class="accueil-texte">Regardez des vidéos c’est bien mais notre entourage ne comprend pas
-                            toujours
-                            pourquoi on change de style de vie.
-                            Nous voulons ici vous donner la possibilité de partager des vidéos que les membres de la
-                            communauté
-                            pourront commenter.
-                            ATTENTION : Si les commentaires ne sont pas bienveillants, nous nous donnons le droit de
-                            vous
-                            exclure définitivement du réseau.</p>
-    
-                    </div>
-                </div>
-            </div>
+        <div class="texte-defilant">
+        <span>Rejoignez la communauté des femmes qui se mettent en mouvement ! Rejoignez la communauté des femmes qui se mettent en mouvement ! Rejoignez la communauté des femmes qui se mettent en mouvement !</span>
         </div>
-    </div>
-       <script src="assets/Javascript/js.js"></script>
-</main>
-<footer>
-    <div class="footer-container">
-        <div class="left">                
-            <div class="logo">
-            <div class="logo-container">
-                <a href="/index"><img src="assets/images/logo.png" alt="logo"></a>
+    
+    <section id="accueil-pele-mele">
+
+        <div class="accueil-pele-mele-1">
+        <div class="photo-accueil" id="motivation">
+            <img src="../static/assets/images/index-gestion_profil-contact/boxe-femme-agee.jpg" alt="boxe-femme-agee">
+            <div>
+                <h4>MOTIVATION</h4>
             </div>
-            <div class="social-media">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-            </div>
-            </div>
-        </div>
-        <div class="center subscribe p">
-            <p>Adresse: 15 rue henri  chevreau,75011,Paris</p>
-            <p>Tel: 0467897678</p>
-            <p>Email: contact@sportfemme.com</p>
-        </div>
-        <div class="right">
-            <div class="subscribe">
-                <h3>Abonnez vous</h3>
-                <p>Entrez votre email ici pour recevoir des notifications</p>
-                <form>
-                    <div class="input">
-                        <input type="email" class="inputtext">
-                        <input type="button" value="S'INSCRIRE" class="button">
-                    </div>
-                </form>
-            </div>
+
+                <div >
+                    <p>Chaque goutte de sueur est une victoire sur vos limites, mesdames ; le sport n'est pas seulement un défi physique, c'est une célébration de votre force et de votre détermination.</p>
+                </div>
+            
+        
         </div>
 
-           
-        </div>       
+        <div class="photo-accueil" id="sororite">
+                <img src="../static/assets/images/index-gestion_profil-contact/femmes-au-gymnase-prendre-photos.jpg" alt="femmes-au-gymnase-prendre-photos" >
+                <div >
+                    <h4>SORORITE</h4>
+                </div>
+                <div >
+                    <div>
+                        <p>Dans l'arène sportive, la sororité transforme les rivales en alliées, créant une force collective qui transcende la compétition.</p> 
+                </div>
+            </div>
+        </div>
+        
+        
+        <div class="photo-accueil" id="inclusion"> 
+            <img src="../static/assets/images/index-gestion_profil-contact/femme-bionique.png" alt="femmes-au-gymnase-prendre-photos"  class="large-image">
+                <div>
+                    <h4>INCLUSION</h4>
+                </div>
+                                    
+                <div >
+                     <p>Le sport pour toutes : un terrain de jeu où chaque femme, dans sa singularité, trouve sa place et s'épanouit, enrichissant le monde sportif de sa diversité unique</p>  
+                </div>
+        </div>
+        </div>
+
+        <div class="accueil-pele-mele-2">
+        <div class="photo-accueil" id="communaute">
+                    
+                        <img src="../static/assets/images/index-gestion_profil-contact/groupe-jolies-amies-sportives-prenant-selfie-autoportrait-vue-smartphone-depuis-haut_1163-3523.jpg" alt="femmes-au-gymnase-prendre-photos"  class="large-image">
+                        <div>
+                            <h4>COMMUNAUTE</h4>
+                        </div>
+                        <div>
+                            <div>
+                                <p >Unies par la passion et la persévérance, les femmes sportives ordinaires forment une communauté inspirante où chaque effort compte et chaque progrès est célébré.</p>  
+                            </div>
+                        </div>
+                    
+         
+    </div> 
+    <div class="photo-accueil" id="nutrition">
+                        
+                            <img src="../static/assets/images/N14.jpg" alt="femmes-au-gymnase-prendre-photos"  class="large-image">
+                            <div>
+                                <h4>NUTRITION</h4>
+                            </div>
+                            <div>
+                                <div>
+                                    <p>Une alimentation équilibrée est le carburant secret des athlètes féminines, nourrissant à la fois leur performance et leur bien-être.</p>  
+                                </div>
+                            </div>
+                           
+        </div>
+
+        <div class="photo-accueil" id="documentaire">
+                            
+                                <img src="../static/assets/images/index-gestion_profil-contact//bandeau_alice_milliat.jpg" alt="femmes-au-gymnase-prendre-photos"  class="large-image">
+                                <div>
+                                    <h4>DOCUMENTAIRE</h4>
+                                </div>
+                                <div>
+                                    <div>
+                                        <p>Les documentaires sur le sport féminin sont des fenêtres sur des parcours extraordinaires, montrant à chaque femme que sa propre histoire sportive mérite d'être écrite et célébrée.</p>  
+                                    </div>
+                                </div>
+                                
+        </div> 
+        </div>
+
+        <div class="accueil-pele-mele-3">
+        <div class="photo-accueil" id="premier-pas">
+                                
+                                    <img src="../static/assets/images/index-gestion_profil-contact/femme-surpoids-faisant-exercice-dans-escaliers-exterieur.jpg" alt="femmes-au-gymnase-prendre-photos"  class="large-image">
+                                    <div>
+                                        <h4>PREMIERS PAS</h4>
+                                    </div>
+                                    
+                                        <div>
+                                            <p>Chaque foulée hésitante d'une femme ordinaire sur un terrain de sport est une victoire silencieuse, ouvrant la voie à un voyage personnel de découverte et de dépassement de soi.</p>  
+                                        </div>
+                                    
+                                    
+        
+
+        
+                                
+                                   
+                                   
+        </div>
+        <div class="photo-accueil" id="discipline">
+                    <img src="../static/assets/images/index-gestion_profil-contact/heureuse-femme-ravie-tient-tapis-yoga.jpg" alt="femmes-au-gymnase-prendre-photos"  >
+                    <div>
+                        <h4>DISCIPLINE</h4>
+                    </div>
+                    <div>
+                        <div>
+                            <p>La discipline sportive au quotidien est le secret des femmes ordinaires pour accomplir des choses extraordinaires, transformant chaque défi en une opportunité de croissance.</p>
+                            
+                        </div>
+                </div>
+        </div>
+        </div>    
+    </section>
+</main>
+<footer>
+<div class="footer-container">
+    <div class="left">                
+        <div class="logo">
+        <div class="logo-container">
+            <a href="index.html"><img src="../static/assets/images/logo.png" alt="logo"></a>
+        </div>
+        <div class="social-media">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+        </div>
+        </div>
     </div>
-    <hr>
-    <div class="copyright">
-        <p>© 2024 [Your Name or Company]. All Rights Reserved. | Terms of Service | Privacy Policy</p>
+    <div class="centersubscribep">
+        <p>Adresse: 15 rue henri  chevreau,75011,Paris</p>
+        <p>Tel: 0467897678</p>
+        <p>Email: contact@sportfemme.com</p>
     </div>
+    <div class="right">
+        <div class="subscribe">
+            <h3>Abonnez vous</h3>
+            <p>Entrez votre email ici pour recevoir des notifications</p>
+            <form>
+                <div class="input">
+                    <input type="email" class="inputtext">
+                    <button>S'INSCRIRE</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+        
+    </div>       
+</div>
+<hr>
+<div class="copyright">
+    <p>© 2024 [Your Name or Company]. All Rights Reserved. | Terms of Service | Privacy Policy</p>
+</div>
 </footer>
 </body>
 </html>
