--- a/src/main/resources/templates/pages/inscription.html
+++ b/src/main/resources/templates/pages/inscription.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/Javascript/inscription.js">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
     <title>Contact</title>
 </head>
 
@@ -33,7 +33,7 @@
     <main>
         <div id="logincontainer">
             <div><img src="../assets/images/img1.png" alt=""></div>
-            <form method="post" action="/inscription/login" id="connectPage" style="display: block;">
+            <form method="post" action="/login"  id="connectPage" style="display: block;">
                 <h1>CONNEXION</h1>
                 <div class="page">
                 <div>
@@ -45,7 +45,7 @@
                     <input type="password" id="connectPassword" name="password">
                     <P>Mot de passe oublié?</P>
                 </div>
-                <button id="connectButton" type="button"  class="button" >CONNECT</button>
+                <button  type="submit"  class="button" >CONNECT</button>
                 <a href="javascript:void(0)" id="newUserLink">Créer un compte!</a>
                 </div>
             </form>
@@ -66,7 +66,7 @@
                  </div>
             </div>
         </div>
-        <script src="../assets/Javascript/inscription.js"></script>
+
     </main>
     <footer>
         <div class="footer-container">
@@ -108,5 +108,6 @@
             <p>© 2024 [Your Name or Company]. All Rights Reserved. | Terms of Service | Privacy Policy</p>
         </div>
     </footer>
+
 </body>
 </html>
