--- a/src/main/resources/templates/pages/profil.html
+++ b/src/main/resources/templates/pages/profil.html
@@ -311,8 +311,7 @@
             <p>© 2024 [Your Name or Company]. All Rights Reserved. | Terms of Service | Privacy Policy</p>
         </div>
     </footer>
-    <script src="../assets/Javascript/inscription.js"></script>
+    <script src="../assets/Javascript/auth.js"></script> 
     <script src="../assets/Javascript/profil.js"></script>
-    <script src="../assets/Javascript/AuthService.js"></script>
 </body>
 </html>
